add get orders for customer and improve filters
